--- a/Views/EditorTemplates/Parts/ContactForm.cshtml
+++ b/Views/EditorTemplates/Parts/ContactForm.cshtml
@@ -2,14 +2,13 @@
 @model ContactFormPart
 
 <div class="form-group">
-    @Html.LabelFor(m => m.Name)
-    @Html.TextBoxFor(m => m.Name, new { @class = "test" })
+    @Html.TextBoxFor(m => m.Name, new { @class = "test", placeholder = "Name" })
     @Html.ValidationMessageFor(m => m.Name)
 </div>
 
 <div class="form-group">
     @Html.LabelFor(m => m.EmailAddress)
-    @Html.TextBoxFor(m => m.EmailAddress, new { @class = "test" })
+    @Html.TextBoxFor(m => m.EmailAddress, new { @class = "test"})
     @Html.ValidationMessageFor(m => m.EmailAddress)
     <small id="emailHelp" class="form-text text-muted">
         We'll never share your email with anyone else.
