Edit layout and add style for UI contact us

--- a/Views/EditorTemplates/Parts/Address.cshtml
+++ b/Views/EditorTemplates/Parts/Address.cshtml
@@ -3,67 +3,67 @@
 
 <div class="form-group">
     @Html.LabelFor(m => m.HouseNumber)
-    @Html.TextBoxFor(m => m.HouseNumber, new { @class = "test" })
+    @Html.TextBoxFor(m => m.HouseNumber, new { @class = "text large" })
     @Html.ValidationMessageFor(m => m.HouseNumber)
 </div>
 
 <div class="form-group">
     @Html.LabelFor(m => m.VillageName)
-    @Html.TextBoxFor(m => m.VillageName, new { @class = "test" })
+    @Html.TextBoxFor(m => m.VillageName, new { @class = "text large" })
     @Html.ValidationMessageFor(m => m.VillageName)
 </div>
 
 <div class="form-group">
     @Html.LabelFor(m => m.VillageNumber)
-    @Html.TextBoxFor(m => m.VillageNumber, new { @class = "test" })
+    @Html.TextBoxFor(m => m.VillageNumber, new { @class = "text large" })
     @Html.ValidationMessageFor(m => m.VillageNumber)
 </div>
 
 <div class="form-group">
     @Html.LabelFor(m => m.BuildingName)
-    @Html.TextBoxFor(m => m.BuildingName, new { @class = "test" })
+    @Html.TextBoxFor(m => m.BuildingName, new { @class = "text large" })
     @Html.ValidationMessageFor(m => m.BuildingName)
 </div>
 
 <div class="form-group">
     @Html.LabelFor(m => m.Floor)
-    @Html.TextBoxFor(m => m.Floor, new { @class = "test" })
+    @Html.TextBoxFor(m => m.Floor, new { @class = "text large" })
     @Html.ValidationMessageFor(m => m.Floor)
 </div>
 
 <div class="form-group">
     @Html.LabelFor(m => m.Lane)
-    @Html.TextBoxFor(m => m.Lane, new { @class = "test" })
+    @Html.TextBoxFor(m => m.Lane, new { @class = "text large" })
     @Html.ValidationMessageFor(m => m.Lane)
 </div>
 
 <div class="form-group">
     @Html.LabelFor(m => m.Street)
-    @Html.TextBoxFor(m => m.Street, new { @class = "test" })
+    @Html.TextBoxFor(m => m.Street, new { @class = "text large" })
     @Html.ValidationMessageFor(m => m.Street)
 </div>
 
 <div class="form-group">
     @Html.LabelFor(m => m.Subdistrict)
-    @Html.TextBoxFor(m => m.Subdistrict, new { @class = "test" })
+    @Html.TextBoxFor(m => m.Subdistrict, new { @class = "text large" })
     @Html.ValidationMessageFor(m => m.Subdistrict)
 </div>
 
 <div class="form-group">
     @Html.LabelFor(m => m.District)
-    @Html.TextBoxFor(m => m.District, new { @class = "test" })
+    @Html.TextBoxFor(m => m.District, new { @class = "text large" })
     @Html.ValidationMessageFor(m => m.District)
 </div>
 
 <div class="form-group">
     @Html.LabelFor(m => m.Province)
-    @Html.TextBoxFor(m => m.Province, new { @class = "test" })
+    @Html.TextBoxFor(m => m.Province, new { @class = "text large" })
     @Html.ValidationMessageFor(m => m.Province)
 </div>
 
 <div class="form-group">
     @Html.LabelFor(m => m.ZipCode)
-    @Html.TextBoxFor(m => m.ZipCode, new { @class = "test" })
+    @Html.TextBoxFor(m => m.ZipCode, new { @class = "text large" })
     @Html.ValidationMessageFor(m => m.ZipCode)
 </div>
 
