--- a/Views/EditorTemplates/Parts/ContactForm.cshtml
+++ b/Views/EditorTemplates/Parts/ContactForm.cshtml
@@ -2,32 +2,23 @@
 @model ContactFormPart
 
 <div class="form-group">
-    @Html.TextBoxFor(m => m.Name, new { @class = "test", placeholder = "Name" })
+    @Html.TextBoxFor(m => m.Name, new { @class = "form-control input-contact-us", placeholder = @Html.DisplayNameFor(m => m.Name) })
     @Html.ValidationMessageFor(m => m.Name)
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(m => m.EmailAddress)
-    @Html.TextBoxFor(m => m.EmailAddress, new { @class = "test"})
+    @Html.TextBoxFor(m => m.EmailAddress, new { @class = "form-control input-contact-us", placeholder = @Html.DisplayNameFor(m => m.EmailAddress) })
     @Html.ValidationMessageFor(m => m.EmailAddress)
-    <small id="emailHelp" class="form-text text-muted">
-        We'll never share your email with anyone else.
-    </small>
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(m => m.MobilePhoneNumber)
-    @Html.TextBoxFor(m => m.MobilePhoneNumber, new { @class = "test" })
+    @Html.TextBoxFor(m => m.MobilePhoneNumber, new { @class = "form-control  input-contact-us", placeholder = @Html.DisplayNameFor(m => m.MobilePhoneNumber) })
     @Html.ValidationMessageFor(m => m.MobilePhoneNumber)
-    <small id="emailHelp" class="form-text text-muted">
-        We'll never share your phone number with anyone else.
-    </small>
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(m => m.Message)
-    @Html.TextAreaFor(m => m.Message, new { @class = "test" })
+    @Html.TextAreaFor(m => m.Message, new { @class = "form-control input-contact-us", placeholder = @Html.DisplayNameFor(m => m.Message) , rows = 6})
     @Html.ValidationMessageFor(m => m.Message)
 </div>
 
-<button type="submit" class="btn btn-secondary">Submit</button>
+<button type="submit" class="btn-submit-contact-us">SUBMIT</button>
