--- a/Views/EditorTemplates/Parts/Address.cshtml
+++ b/Views/EditorTemplates/Parts/Address.cshtml
@@ -2,68 +2,74 @@
 @model AddressPart
 
 <div class="form-group">
-    @Html.LabelFor(m => m.HouseNumber)
-    @Html.TextBoxFor(m => m.HouseNumber, new { @class = "text large" })
+    <label for="@Html.IdFor(m => m.HouseNumber)">@T(Html.DisplayNameFor(m=>m.HouseNumber).ToString())</label>
+    @Html.TextBoxFor(m => m.HouseNumber, new { @class = "text medium" })
     @Html.ValidationMessageFor(m => m.HouseNumber)
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(m => m.VillageName)
-    @Html.TextBoxFor(m => m.VillageName, new { @class = "text large" })
+    <label for="@Html.IdFor(m => m.VillageName)">@T(Html.DisplayNameFor(m=>m.VillageName).ToString())</label>
+    @Html.TextBoxFor(m => m.VillageName, new { @class = "text medium" })
     @Html.ValidationMessageFor(m => m.VillageName)
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(m => m.VillageNumber)
-    @Html.TextBoxFor(m => m.VillageNumber, new { @class = "text large" })
+    <label for="@Html.IdFor(m => m.VillageNumber)">@T(Html.DisplayNameFor(m=>m.VillageNumber).ToString())</label>
+    @Html.TextBoxFor(m => m.VillageNumber, new { @class = "text medium" })
     @Html.ValidationMessageFor(m => m.VillageNumber)
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(m => m.BuildingName)
-    @Html.TextBoxFor(m => m.BuildingName, new { @class = "text large" })
+    <label for="@Html.IdFor(m => m.BuildingName)">@T(Html.DisplayNameFor(m=>m.BuildingName).ToString())</label>
+    @Html.TextBoxFor(m => m.BuildingName, new { @class = "text medium" })
     @Html.ValidationMessageFor(m => m.BuildingName)
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(m => m.Floor)
-    @Html.TextBoxFor(m => m.Floor, new { @class = "text large" })
+    <label for="@Html.IdFor(m => m.RoomNumber)">@T(Html.DisplayNameFor(m=>m.RoomNumber).ToString())</label>
+    @Html.TextBoxFor(m => m.RoomNumber, new { @class = "text medium" })
+    @Html.ValidationMessageFor(m => m.RoomNumber)
+</div>
+
+<div class="form-group">
+    <label for="@Html.IdFor(m => m.Floor)">@T(Html.DisplayNameFor(m=>m.Floor).ToString())</label>
+    @Html.TextBoxFor(m => m.Floor, new { @class = "text medium" })
     @Html.ValidationMessageFor(m => m.Floor)
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(m => m.Lane)
-    @Html.TextBoxFor(m => m.Lane, new { @class = "text large" })
+    <label for="@Html.IdFor(m => m.Lane)">@T(Html.DisplayNameFor(m=>m.Lane).ToString())</label>
+    @Html.TextBoxFor(m => m.Lane, new { @class = "text medium" })
     @Html.ValidationMessageFor(m => m.Lane)
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(m => m.Street)
-    @Html.TextBoxFor(m => m.Street, new { @class = "text large" })
+    <label for="@Html.IdFor(m => m.Street)">@T(Html.DisplayNameFor(m=>m.Street).ToString())</label>
+    @Html.TextBoxFor(m => m.Street, new { @class = "text medium" })
     @Html.ValidationMessageFor(m => m.Street)
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(m => m.Subdistrict)
-    @Html.TextBoxFor(m => m.Subdistrict, new { @class = "text large" })
+    <label for="@Html.IdFor(m => m.Subdistrict)">@T(Html.DisplayNameFor(m=>m.Subdistrict).ToString())</label>
+    @Html.TextBoxFor(m => m.Subdistrict, new { @class = "text medium" })
     @Html.ValidationMessageFor(m => m.Subdistrict)
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(m => m.District)
-    @Html.TextBoxFor(m => m.District, new { @class = "text large" })
+    <label for="@Html.IdFor(m => m.District)">@T(Html.DisplayNameFor(m=>m.District).ToString())</label>
+    @Html.TextBoxFor(m => m.District, new { @class = "text medium" })
     @Html.ValidationMessageFor(m => m.District)
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(m => m.Province)
-    @Html.TextBoxFor(m => m.Province, new { @class = "text large" })
+    <label for="@Html.IdFor(m => m.Province)">@T(Html.DisplayNameFor(m=>m.Province).ToString())</label>
+    @Html.TextBoxFor(m => m.Province, new { @class = "text medium" })
     @Html.ValidationMessageFor(m => m.Province)
 </div>
 
 <div class="form-group">
-    @Html.LabelFor(m => m.ZipCode)
-    @Html.TextBoxFor(m => m.ZipCode, new { @class = "text large" })
+    <label for="@Html.IdFor(m => m.ZipCode)">@T(Html.DisplayNameFor(m=>m.ZipCode).ToString())</label>
+    @Html.TextBoxFor(m => m.ZipCode, new { @class = "text medium" })
     @Html.ValidationMessageFor(m => m.ZipCode)
 </div>
 
