--- a/Views/EditorTemplates/Parts/ContactInformation.cshtml
+++ b/Views/EditorTemplates/Parts/ContactInformation.cshtml
@@ -2,13 +2,13 @@
 @model ContactInformationPart
 
 <div>
-    @Html.LabelFor(m => m.PhoneNumber)
-    @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "test" })
+    <label for="@Html.IdFor(m => m.PhoneNumber)">@T(Html.DisplayNameFor(m=>m.PhoneNumber).ToString())</label>
+    @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "text medium" })
     @Html.ValidationMessageFor(m => m.PhoneNumber)
 </div>
 
 <div>
-    @Html.LabelFor(m => m.EmailAddress)
-    @Html.TextBoxFor(m => m.EmailAddress, new { @class = "test" })
+    <label for="@Html.IdFor(m => m.EmailAddress)">@T(Html.DisplayNameFor(m=>m.EmailAddress).ToString())</label>
+    @Html.TextBoxFor(m => m.EmailAddress, new { @class = "text medium" })
     @Html.ValidationMessageFor(m => m.EmailAddress)
 </div>
