--- a/Views/EditorTemplates/Parts/ContactForm.cshtml
+++ b/Views/EditorTemplates/Parts/ContactForm.cshtml
@@ -42,14 +42,13 @@
 <div class="form-group">
     @Html.TextAreaFor(
         m => m.Message,
-        new
-            {
-                @class = "form-control input-contact-us",
+        new {
+            @class = "form-control input-contact-us",
             placeholder = T(Html.DisplayNameFor(m => m.Message).ToString()),
-            rows = 6
+            rows = 3
         }
     )
     @Html.ValidationMessageFor(m => m.Message)
 </div>
 
-<button type="submit" class="btn-submit-contact-us mb-4">SUBMIT</button>
+<button type="submit" class="btn-submit-contact-us mb-4">Send</button>
