--- a/Views/ContactUs/Index.cshtml
+++ b/Views/ContactUs/Index.cshtml
@@ -7,7 +7,7 @@
         <div class="col-6">
             <div class="full-width-contents">
                 <div class="entry-content">
-                    <h2>Get in Touch</h2>
+                    <h2>Contact us</h2>
                     @* https://getbootstrap.com/docs/4.0/components/forms/#help-text *@
                     <small class="form-text text-muted">
                         Please fill your contact information, message and click send button to contact us.
