Fix text wrap and layout for mobile

--- a/Views/ContactUs/Index.cshtml
+++ b/Views/ContactUs/Index.cshtml
@@ -4,7 +4,7 @@
 }
 <div class="container">
     <div class="row">
-        <div class="col-6">
+        <div class="col-md-6 col-12">
             <div class="full-width-contents">
                 <div class="entry-content">
                     <h2>Contact us</h2>
@@ -29,7 +29,7 @@
                 @Display(Model.ContactForm)
             }
         </div>
-        <div class="col-6">
+        <div class="col-md-6 col-12">
             @Display(Model.ContactInformation)
         </div>
     </div>
