--- a/Views/Parts/ContactInformation.cshtml
+++ b/Views/Parts/ContactInformation.cshtml
@@ -1,10 +1,10 @@
 ﻿@using Codesanook.OrganizationProfile.ViewModels
 @model ContactInformationDisplayViewModel 
 <p class="text-nowrap-dx">
-    <strong>@Html.DisplayNameFor(m=>m.PhoneNumber) :</strong>
+    <strong>@T(Html.DisplayNameFor(m=>m.PhoneNumber).ToString()) :</strong>
     <a href="tel:@Model.PhoneNumber"> @Model.PhoneNumber</a>
 </p>
 <p class="text-nowrap-dx">
-    <strong>@Html.DisplayNameFor(m=>m.EmailAddress) :</strong>
+    <strong>@T(Html.DisplayNameFor(m=>m.EmailAddress).ToString()) :</strong>
     <a href="mailto:@Model.EmailAddress">@Model.EmailAddress</a>
 </p> 
