Adjust layout contact us is full scree

--- a/Views/ContactUs/Index.cshtml
+++ b/Views/ContactUs/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="row">
         @if (setting.ShowContactUsForm)
         {
-            <div class="col-md-6 col-12">
+            <div class="col-sm col-12">
                 <div class="full-width-contents">
                     <div class="entry-content">
                         <h2>@T("Contact us")</h2>
@@ -35,7 +35,7 @@
                 </div>
             </div>
         }
-        <div class="col-md-6 col-12">
+        <div class="col-sm col-12">
             @Display(Model.ContactInformation)
         </div>
     </div>
