Add SocialLinks widget

--- a/Views/ContactUs/Index.cshtml
+++ b/Views/ContactUs/Index.cshtml
@@ -41,7 +41,7 @@
             </div>
         }
         <div class="col-sm col-12">
-            @*Hold contact information content item which contains ContactINformationPart and AddressPart*@
+            @*Hold contact information content item which contains ContactInformationPart, AddressPart, social link*@
             @Display(Model.ContactInformation)
         </div>
     </div>
