--- a/Views/Parts/SocialLinks.cshtml
+++ b/Views/Parts/SocialLinks.cshtml
@@ -9,18 +9,22 @@
     );
 
     // Get only not null properties with Reflection
-    var links = from p in propertiesWithoutInheritedClass
+    var links =
+        from p in propertiesWithoutInheritedClass
         where !string.IsNullOrWhiteSpace(p.GetValue(Model) as string)
-        select new { p.Name, Url = p.GetValue(Model) };
-}
-<article class="social-icon clearfix">
-    <h5><span>@T("Social") :</span></h5>
-    <ul class="clearfix">
-        @foreach (var link in links)
+        select new
         {
-            <li class="@link.Name.ToLower()-icon">
-                <a target="_blank"  href="@link.Url"> <i class="fa fa-@link.Name.ToLower()"></i></a>
-            </li>
-        }
-    </ul>
-</article>
+            p.Name,
+            Url = p.GetValue(Model)
+        };
+}
+<ul class="social-link-list">
+    @foreach (var link in links)
+    {
+        <li class="item">
+            <a target="_blank" href="@link.Url" class="social-link">
+                <i class="fa fa-@link.Name.ToLower()"></i>
+            </a>
+        </li>
+    }
+</ul>
