Remove name parameter

--- a/Views/ContactUs/Index.cshtml
+++ b/Views/ContactUs/Index.cshtml
@@ -25,7 +25,7 @@
                     </div>
                     <div>
                         @Html.ValidationSummary(
-                          excludePropertyErrors: true,
+                          true,
                           "Please fix errors and then click send button again."
                       )
                     </div>
